--- a/software/main.lfm
+++ b/software/main.lfm
@@ -457,7 +457,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire EEPROM'
+      'Программатор SPI, I2C, Microwire EEPROM v1.2'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
