--- a/software/main.lfm
+++ b/software/main.lfm
@@ -1,7 +1,7 @@
 object MainForm: TMainForm
-  Left = 556
+  Left = 517
   Height = 519
-  Top = 268
+  Top = 253
   Width = 802
   Caption = 'AsProgrammer'
   ClientHeight = 499
@@ -36,7 +36,6 @@ object MainForm: TMainForm
       Left = 83
       Hint = 'Прочитать EEPROM'
       Top = 2
-      Caption = 'Read'
       ImageIndex = 1
       OnClick = ButtonReadClick
       ParentShowHint = False
@@ -46,7 +45,6 @@ object MainForm: TMainForm
       Left = 119
       Hint = 'Записать EEPROM'
       Top = 2
-      Caption = 'Write'
       DropdownMenu = DropDownMenu
       ImageIndex = 0
       OnClick = ButtonWriteClick
@@ -68,7 +66,6 @@ object MainForm: TMainForm
       Left = 203
       Hint = 'Сравнить содержимое EEPROM'
       Top = 2
-      Caption = 'Verify'
       ImageIndex = 6
       OnClick = ButtonVerifyClick
       ParentShowHint = False
@@ -86,7 +83,6 @@ object MainForm: TMainForm
       Left = 249
       Hint = 'Прочитать индификатор EEPROM'
       Top = 2
-      Caption = 'ReadID'
       ImageIndex = 2
       OnClick = ButtonReadIDClick
       ParentShowHint = False
@@ -173,7 +169,6 @@ object MainForm: TMainForm
       Left = 343
       Hint = 'Прервать текущею операцию'
       Top = 2
-      Caption = 'Cancel'
       ImageIndex = 8
       OnClick = ButtonCancelClick
       ParentShowHint = False
@@ -356,15 +351,15 @@ object MainForm: TMainForm
       ItemHeight = 15
       ItemIndex = 0
       Items.Strings = (
-        '25-я серия'
-        '45-я серия'
+        '25xx'
+        '45xx'
         'KB9012'
-        '95-я серия'
+        '95xx'
       )
       OnChange = ComboSPICMDChange
       Style = csDropDownList
       TabOrder = 4
-      Text = '25-я серия'
+      Text = '25xx'
     end
     object LabelSPICMD: TLabel
       Left = 340
@@ -436,7 +431,6 @@ object MainForm: TMainForm
     Width = 802
     Panels = <    
       item
-        Text = 'Размер: 0'
         Width = 120
       end    
       item
@@ -457,7 +451,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire EEPROM v1.2.1'
+      'Программатор SPI, I2C, Microwire EEPROM v1.3.0'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
@@ -491,7 +485,6 @@ object MainForm: TMainForm
       object MenuAutoCheck: TMenuItem
         AutoCheck = True
         Caption = 'Проверка записи'
-        OnClick = MenuAutoCheckClick
       end
       object MenuSPI: TMenuItem
         Caption = 'SPI'
