--- a/software/main.lfm
+++ b/software/main.lfm
@@ -451,7 +451,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire EEPROM v1.3.0'
+      'Программатор SPI, I2C, Microwire EEPROM v1.3.1'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
@@ -1744,6 +1744,7 @@ object MainForm: TMainForm
     end
     object MenuFind: TMenuItem
       Caption = 'Поиск'
+      ShortCut = 16454
       OnClick = MenuFindClick
     end
     object MenuItem1: TMenuItem
