Добавлена возможность редактирования битов SREG 25-ой серии

--- a/software/search.lfm
+++ b/software/search.lfm
@@ -3,6 +3,8 @@ object SearchForm: TSearchForm
   Height = 225
   Top = 236
   Width = 249
+  BorderIcons = [biSystemMenu, biMinimize]
+  BorderStyle = bsSingle
   Caption = 'Поиск'
   ClientHeight = 225
   ClientWidth = 249
