--- a/software/main.lfm
+++ b/software/main.lfm
@@ -1,7 +1,7 @@
 object MainForm: TMainForm
-  Left = 638
+  Left = 761
   Height = 519
-  Top = 260
+  Top = 237
   Width = 802
   Caption = 'AsProgrammer'
   ClientHeight = 499
@@ -451,7 +451,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire EEPROM v1.3.1'
+      'Программатор SPI, I2C, Microwire EEPROM v1.3.3'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
@@ -1781,6 +1781,10 @@ object MainForm: TMainForm
     object MenuItemReadSreg: TMenuItem
       Caption = 'Прочитать SREG'
       OnClick = MenuItemReadSregClick
+    end
+    object MenuItemEditSreg: TMenuItem
+      Caption = 'Изменить SREG'
+      OnClick = MenuItemEditSregClick
     end
   end
 end
