--- a/software/main.lfm
+++ b/software/main.lfm
@@ -285,6 +285,7 @@ object MainForm: TMainForm
         '1BYTE_2BIT'
         '1BYTE_3BIT'
         '2BYTE'
+        '2BYTE_1BIT'
       )
       ParentShowHint = False
       ShowHint = True
@@ -451,7 +452,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire EEPROM v1.3.3'
+      'Программатор SPI, I2C, Microwire EEPROM v1.3.5'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
