--- a/software/main.lfm
+++ b/software/main.lfm
@@ -539,6 +539,10 @@ object MainForm: TMainForm
           AutoCheck = True
           Caption = 'Не проверять Busy бит'
         end
+        object MenuItemBenchmark: TMenuItem
+          Caption = 'Benchmark'
+          OnClick = MenuItemBenchmarkClick
+        end
       end
       object MenuMicrowire: TMenuItem
         Caption = 'Microwire (soft)'
