--- a/software/main.lfm
+++ b/software/main.lfm
@@ -452,7 +452,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire EEPROM v1.3.9'
+      'Программатор SPI, I2C, Microwire FLASH/EEPROM v1.3.10'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
