--- a/software/sregedit.lfm
+++ b/software/sregedit.lfm
@@ -2,140 +2,156 @@ object sregeditForm: TsregeditForm
   Left = 669
   Height = 155
   Top = 379
-  Width = 200
+  Width = 201
   Align = alCustom
   BorderStyle = bsToolWindow
   Caption = 'SREG'
   ClientHeight = 155
-  ClientWidth = 200
+  ClientWidth = 201
   FormStyle = fsStayOnTop
   Position = poOwnerFormCenter
-  LCLVersion = '1.4.4.0'
+  LCLVersion = '1.6.2.0'
   object CheckBoxSB7: TCheckBox
     Left = 22
     Height = 19
-    Top = 28
+    Top = 26
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 0
   end
   object CheckBoxSB6: TCheckBox
     Left = 38
     Height = 19
-    Top = 28
+    Top = 26
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 1
   end
   object CheckBoxSB5: TCheckBox
     Left = 54
     Height = 19
-    Top = 28
+    Top = 26
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 2
   end
   object CheckBoxSB4: TCheckBox
     Left = 70
     Height = 19
-    Top = 28
+    Top = 26
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 3
   end
   object CheckBoxSB3: TCheckBox
     Left = 86
     Height = 19
-    Top = 28
+    Top = 26
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 4
   end
   object CheckBoxSB2: TCheckBox
     Left = 102
     Height = 19
-    Top = 28
+    Top = 26
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 5
   end
   object CheckBoxSB1: TCheckBox
     Left = 118
     Height = 19
-    Top = 28
+    Top = 26
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 6
   end
   object CheckBoxSB0: TCheckBox
     Left = 134
     Height = 19
-    Top = 28
-    Width = 20
+    Top = 26
+    Width = 14
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 7
   end
   object CheckBoxSB15: TCheckBox
     Left = 22
     Height = 19
-    Top = 56
+    Top = 59
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 8
   end
   object CheckBoxSB14: TCheckBox
     Left = 38
     Height = 19
-    Top = 56
+    Top = 59
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 9
   end
   object CheckBoxSB13: TCheckBox
     Left = 54
     Height = 19
-    Top = 56
+    Top = 59
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 10
   end
   object CheckBoxSB12: TCheckBox
     Left = 70
     Height = 19
-    Top = 56
+    Top = 59
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 11
   end
   object CheckBoxSB11: TCheckBox
     Left = 86
     Height = 19
-    Top = 56
+    Top = 59
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 12
   end
   object CheckBoxSB10: TCheckBox
     Left = 102
     Height = 19
-    Top = 56
+    Top = 59
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 13
   end
   object CheckBoxSB9: TCheckBox
     Left = 118
     Height = 19
-    Top = 56
+    Top = 59
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 14
   end
   object CheckBoxSB8: TCheckBox
     Left = 134
     Height = 19
-    Top = 56
-    Width = 20
+    Top = 59
+    Width = 16
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 15
   end
@@ -149,7 +165,7 @@ object sregeditForm: TsregeditForm
     TabOrder = 16
   end
   object ButtonWriteSreg: TButton
-    Left = 104
+    Left = 112
     Height = 25
     Top = 120
     Width = 75
@@ -158,9 +174,9 @@ object sregeditForm: TsregeditForm
     TabOrder = 17
   end
   object EditSreg1: TEdit
-    Left = 166
+    Left = 168
     Height = 23
-    Top = 24
+    Top = 22
     Width = 24
     MaxLength = 2
     OnChange = EditSreg1Change
@@ -168,9 +184,9 @@ object sregeditForm: TsregeditForm
     Text = '00'
   end
   object EditSreg2: TEdit
-    Left = 166
+    Left = 168
     Height = 23
-    Top = 52
+    Top = 55
     Width = 24
     MaxLength = 2
     OnChange = EditSreg2Change
@@ -180,15 +196,15 @@ object sregeditForm: TsregeditForm
   object Label1: TLabel
     Left = 14
     Height = 15
-    Top = 28
+    Top = 26
     Width = 6
     Caption = '7'
     ParentColor = False
   end
   object Label2: TLabel
-    Left = 150
+    Left = 152
     Height = 15
-    Top = 28
+    Top = 26
     Width = 6
     Caption = '0'
     ParentColor = False
@@ -196,15 +212,15 @@ object sregeditForm: TsregeditForm
   object Label3: TLabel
     Left = 8
     Height = 15
-    Top = 56
+    Top = 59
     Width = 12
     Caption = '15'
     ParentColor = False
   end
   object Label4: TLabel
-    Left = 150
+    Left = 152
     Height = 15
-    Top = 56
+    Top = 59
     Width = 6
     Caption = '8'
     ParentColor = False
@@ -212,91 +228,129 @@ object sregeditForm: TsregeditForm
   object CheckBoxSB23: TCheckBox
     Left = 22
     Height = 19
-    Top = 84
+    Top = 92
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 20
   end
   object CheckBoxSB22: TCheckBox
     Left = 38
     Height = 19
-    Top = 84
+    Top = 92
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 21
   end
   object CheckBoxSB21: TCheckBox
     Left = 54
     Height = 19
-    Top = 84
+    Top = 92
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 22
   end
   object CheckBoxSB20: TCheckBox
     Left = 70
     Height = 19
-    Top = 84
+    Top = 92
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 23
   end
   object CheckBoxSB19: TCheckBox
     Left = 86
     Height = 19
-    Top = 84
+    Top = 92
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 24
   end
   object CheckBoxSB18: TCheckBox
     Left = 102
     Height = 19
-    Top = 84
+    Top = 92
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 25
   end
   object CheckBoxSB17: TCheckBox
     Left = 118
     Height = 19
-    Top = 84
+    Top = 92
     Width = 20
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 26
   end
   object CheckBoxSB16: TCheckBox
-    Left = 136
+    Left = 134
     Height = 19
-    Top = 84
-    Width = 20
+    Top = 92
+    Width = 14
+    AutoSize = False
     OnChange = CheckBoxChange
     TabOrder = 27
   end
   object Label5: TLabel
     Left = 8
     Height = 15
-    Top = 84
+    Top = 92
     Width = 12
     Caption = '23'
     ParentColor = False
   end
-  object Label6: TLabel
-    Left = 150
-    Height = 15
-    Top = 84
-    Width = 12
-    Caption = '16'
-    ParentColor = False
-  end
   object EditSreg3: TEdit
-    Left = 166
+    Left = 168
     Height = 23
-    Top = 80
+    Top = 88
     Width = 24
     MaxLength = 2
     OnChange = EditSreg3Change
     TabOrder = 28
     Text = '00'
+  end
+  object Label6: TLabel
+    Left = 152
+    Height = 15
+    Top = 92
+    Width = 12
+    Caption = '16'
+    ParentColor = False
+  end
+  object Label7: TLabel
+    Left = 22
+    Height = 15
+    Top = 13
+    Width = 126
+    Alignment = taCenter
+    AutoSize = False
+    Caption = 'SREG1'
+    ParentColor = False
+  end
+  object Label8: TLabel
+    Left = 22
+    Height = 14
+    Top = 46
+    Width = 126
+    Alignment = taCenter
+    AutoSize = False
+    Caption = 'SREG2'
+    ParentColor = False
+  end
+  object Label9: TLabel
+    Left = 22
+    Height = 15
+    Top = 79
+    Width = 126
+    Alignment = taCenter
+    AutoSize = False
+    Caption = 'SREG2'
+    ParentColor = False
   end
 end
