--- a/software/main.lfm
+++ b/software/main.lfm
@@ -1,7 +1,7 @@
 object MainForm: TMainForm
-  Left = 761
+  Left = 674
   Height = 519
-  Top = 237
+  Top = 211
   Width = 802
   Caption = 'AsProgrammer'
   ClientHeight = 499
@@ -12,7 +12,7 @@ object MainForm: TMainForm
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poDesktopCenter
-  LCLVersion = '1.4.4.0'
+  LCLVersion = '1.6.4.0'
   object ProgressBar: TProgressBar
     Left = 0
     Height = 20
@@ -326,10 +326,9 @@ object MainForm: TMainForm
     end
     object Label3: TLabel
       Left = 0
-      Height = 22
+      Height = 15
       Top = 0
-      Width = 53
-      AutoSize = False
+      Width = 52
       Caption = 'EEPROM: '
       ParentColor = False
     end
@@ -339,7 +338,6 @@ object MainForm: TMainForm
       Top = 17
       Width = 120
       AutoSize = False
-      Caption = 'Микросхема'
       Font.Style = [fsBold]
       ParentColor = False
       ParentFont = False
@@ -452,7 +450,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire FLASH/EEPROM v1.3.10'
+      'Программатор SPI, I2C, Microwire FLASH/EEPROM v1.3.12'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
@@ -640,6 +638,9 @@ object MainForm: TMainForm
         RadioItem = True
         OnClick = MenuHWAVRISPClick
       end
+    end
+    object LangMenuItem: TMenuItem
+      Caption = 'Languadge'
     end
   end
   object ImageList: TImageList
