Добавлена дополнительная инструкция chip erase для 25-ой серии

--- a/software/main.lfm
+++ b/software/main.lfm
@@ -640,7 +640,7 @@ object MainForm: TMainForm
       end
     end
     object LangMenuItem: TMenuItem
-      Caption = 'Languadge'
+      Caption = 'language'
     end
   end
   object ImageList: TImageList
