--- a/software/main.lfm
+++ b/software/main.lfm
@@ -1,7 +1,7 @@
 object MainForm: TMainForm
-  Left = 674
+  Left = 485
   Height = 519
-  Top = 211
+  Top = 305
   Width = 802
   Caption = 'AsProgrammer'
   ClientHeight = 499
@@ -370,40 +370,102 @@ object MainForm: TMainForm
       Caption = 'Команды SPI'
       ParentColor = False
     end
-    object CheckBox_I2C_A2: TCheckBox
-      Left = 464
-      Height = 19
-      Top = 17
-      Width = 20
+    object Panel_I2C_DevAddr: TPanel
+      Left = 448
+      Height = 37
+      Top = -6
+      Width = 336
+      BevelOuter = bvNone
+      ClientHeight = 37
+      ClientWidth = 336
       TabOrder = 5
+      UseDockManager = False
       Visible = False
-    end
-    object CheckBox_I2C_A1: TCheckBox
-      Left = 484
-      Height = 19
-      Top = 17
-      Width = 20
-      TabOrder = 6
-      Visible = False
-    end
-    object CheckBox_I2C_A0: TCheckBox
-      Left = 504
-      Height = 19
-      Top = 17
-      Width = 20
-      ParentShowHint = False
-      TabOrder = 7
-      Visible = False
-    end
-    object LabelI2CAddr: TLabel
-      Left = 464
-      Height = 15
-      Top = 0
-      Width = 64
-      AutoSize = False
-      Caption = 'A2  A1  A0'
-      ParentColor = False
-      Visible = False
+      object Label_I2C_DevAddr: TLabel
+        Left = 0
+        Height = 15
+        Top = 0
+        Width = 140
+        Alignment = taCenter
+        AutoSize = False
+        Caption = 'Адрес устройства'
+        ParentColor = False
+      end
+      object CheckBox_I2C_DevA7: TToggleBox
+        Left = 0
+        Height = 20
+        Top = 17
+        Width = 20
+        Caption = '1'
+        Checked = True
+        OnChange = I2C_DevAddrChange
+        State = cbChecked
+        TabOrder = 0
+      end
+      object CheckBox_I2C_DevA6: TToggleBox
+        Left = 20
+        Height = 20
+        Top = 17
+        Width = 20
+        Caption = '0'
+        OnChange = I2C_DevAddrChange
+        TabOrder = 1
+      end
+      object CheckBox_I2C_DevA5: TToggleBox
+        Left = 40
+        Height = 20
+        Top = 17
+        Width = 20
+        Caption = '1'
+        Checked = True
+        OnChange = I2C_DevAddrChange
+        State = cbChecked
+        TabOrder = 2
+      end
+      object CheckBox_I2C_DevA4: TToggleBox
+        Left = 60
+        Height = 20
+        Top = 17
+        Width = 20
+        Caption = '0'
+        OnChange = I2C_DevAddrChange
+        TabOrder = 3
+      end
+      object CheckBox_I2C_A2: TToggleBox
+        Left = 80
+        Height = 20
+        Top = 17
+        Width = 20
+        Caption = '0'
+        OnChange = I2C_DevAddrChange
+        TabOrder = 4
+      end
+      object CheckBox_I2C_A1: TToggleBox
+        Left = 100
+        Height = 20
+        Top = 17
+        Width = 20
+        Caption = '0'
+        OnChange = I2C_DevAddrChange
+        TabOrder = 5
+      end
+      object CheckBox_I2C_A0: TToggleBox
+        Left = 120
+        Height = 20
+        Top = 17
+        Width = 20
+        Caption = '0'
+        OnChange = I2C_DevAddrChange
+        TabOrder = 6
+      end
+      object CheckBox_I2C_ByteRead: TCheckBox
+        Left = 152
+        Height = 19
+        Top = 18
+        Width = 128
+        Caption = 'Побайтовое чтение'
+        TabOrder = 7
+      end
     end
   end
   object KHexEditor: TKHexEditor
@@ -450,7 +512,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire FLASH/EEPROM v1.3.12'
+      'Программатор SPI, I2C, Microwire FLASH/EEPROM v1.3.14'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
