--- a/software/main.lfm
+++ b/software/main.lfm
@@ -1,7 +1,7 @@
 object MainForm: TMainForm
-  Left = 485
+  Left = 358
   Height = 519
-  Top = 305
+  Top = 67
   Width = 802
   Caption = 'AsProgrammer'
   ClientHeight = 499
@@ -516,7 +516,7 @@ object MainForm: TMainForm
     Font.Height = -12
     HideSelection = False
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire FLASH/EEPROM v1.3.14'
+      'Программатор SPI, I2C, Microwire FLASH/EEPROM v1.4.0'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'tifa@nm.ru'
     )
@@ -705,8 +705,12 @@ object MainForm: TMainForm
         OnClick = MenuHWAVRISPClick
       end
     end
+    object ScriptsMenuItem: TMenuItem
+      Caption = 'Scripts'
+      OnClick = ScriptsMenuItemClick
+    end
     object LangMenuItem: TMenuItem
-      Caption = 'language'
+      Caption = 'Language'
     end
   end
   object ImageList: TImageList
