Обработка закрытие формы редактора скриптов в главной форме

--- a/software/main.lfm
+++ b/software/main.lfm
@@ -9,6 +9,7 @@ object MainForm: TMainForm
   Constraints.MinHeight = 300
   Constraints.MinWidth = 300
   Menu = MainMenu
+  OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poDesktopCenter
