--- a/software/search.lfm
+++ b/software/search.lfm
@@ -3,20 +3,22 @@ object SearchForm: TSearchForm
   Height = 225
   Top = 236
   Width = 249
+  ActiveControl = TextToFindEdit
   BorderIcons = [biSystemMenu, biMinimize]
   BorderStyle = bsSingle
   Caption = 'Поиск'
   ClientHeight = 225
   ClientWidth = 249
   FormStyle = fsStayOnTop
-  OnCreate = FormCreate
   Position = poOwnerFormCenter
-  LCLVersion = '1.4.4.0'
+  LCLVersion = '1.6.4.0'
+  Visible = False
   object TextToFindEdit: TEdit
     Left = 18
     Height = 23
     Top = 24
     Width = 214
+    MaxLength = 256
     TabOrder = 0
   end
   object FindButton: TButton
@@ -26,7 +28,7 @@ object SearchForm: TSearchForm
     Width = 75
     Caption = 'Найти'
     OnClick = FindButtonClick
-    TabOrder = 1
+    TabOrder = 7
   end
   object HexCheckBox: TCheckBox
     Left = 18
@@ -57,7 +59,8 @@ object SearchForm: TSearchForm
     Height = 23
     Top = 63
     Width = 214
-    TabOrder = 5
+    MaxLength = 256
+    TabOrder = 1
   end
   object SearchLabel: TLabel
     Left = 18
@@ -85,7 +88,7 @@ object SearchForm: TSearchForm
     Top = 152
     Width = 73
     Caption = 'Заменить'
-    TabOrder = 6
+    TabOrder = 5
   end
   object ReplaceAllCheckBox: TCheckBox
     Left = 18
@@ -93,6 +96,6 @@ object SearchForm: TSearchForm
     Top = 168
     Width = 94
     Caption = 'Заменить все'
-    TabOrder = 7
+    TabOrder = 6
   end
 end
