--- a/software/main.lfm
+++ b/software/main.lfm
@@ -605,7 +605,7 @@ object MainForm: TMainForm
     Width = 802
     Align = alBottom
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire FLASH/EEPROM v2.0.0'
+      'Программатор SPI, I2C, Microwire FLASH/EEPROM v2.0.0a4'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'asprogrammer@inbox.ru'
     )
@@ -644,6 +644,33 @@ object MainForm: TMainForm
       end
       object MenuSPI: TMenuItem
         Caption = 'SPI'
+        object MenuArduinoSPIClock: TMenuItem
+          Caption = 'Частота'
+          object MenuArduinoISP8MHz: TMenuItem
+            AutoCheck = True
+            Caption = '8 MHz'
+            Checked = True
+            RadioItem = True
+          end
+          object MenuArduinoISP4MHz: TMenuItem
+            Tag = 1
+            AutoCheck = True
+            Caption = '4 MHz'
+            RadioItem = True
+          end
+          object MenuArduinoISP2MHz: TMenuItem
+            Tag = 2
+            AutoCheck = True
+            Caption = '2 MHz'
+            RadioItem = True
+          end
+          object MenuArduinoISP1MHz: TMenuItem
+            Tag = 3
+            AutoCheck = True
+            Caption = '1 MHz'
+            RadioItem = True
+          end
+        end
         object MenuSPIClock: TMenuItem
           Caption = 'Частота'
           object Menu3Mhz: TMenuItem
@@ -769,6 +796,10 @@ object MainForm: TMainForm
           end
         end
       end
+      object MenuArduinoCOMPort: TMenuItem
+        Caption = 'Arduino COMPort:'
+        OnClick = MenuArduinoCOMPortClick
+      end
     end
     object MenuItemHardware: TMenuItem
       Caption = 'Программатор'
@@ -790,6 +821,12 @@ object MainForm: TMainForm
         Caption = 'AVRISP-MKII'
         RadioItem = True
         OnClick = MenuHWAVRISPClick
+      end
+      object MenuHWARDUINO: TMenuItem
+        AutoCheck = True
+        Caption = 'Arduino'
+        RadioItem = True
+        OnClick = MenuHWARDUINOClick
       end
     end
     object ScriptsMenuItem: TMenuItem
