--- a/software/main.lfm
+++ b/software/main.lfm
@@ -18,7 +18,7 @@ object MainForm: TMainForm
   object ProgressBar: TProgressBar
     Left = 0
     Height = 20
-    Top = 369
+    Top = 364
     Width = 802
     Align = alBottom
     Max = 0
@@ -471,7 +471,7 @@ object MainForm: TMainForm
   object MPHexEditorEx: TMPHexEditorEx
     Cursor = crIBeam
     Left = 0
-    Height = 253
+    Height = 248
     Top = 93
     Width = 802
     CreateBackup = False
@@ -583,7 +583,7 @@ object MainForm: TMainForm
   object StatusBar: TStatusBar
     Left = 0
     Height = 23
-    Top = 346
+    Top = 341
     Width = 802
     Panels = <    
       item
@@ -605,7 +605,7 @@ object MainForm: TMainForm
     Width = 802
     Align = alBottom
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire FLASH/EEPROM v2.0.0a4'
+      'Программатор SPI, I2C, Microwire FLASH/EEPROM v2.0.0a10'
       'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
       'asprogrammer@inbox.ru'
     )
@@ -613,6 +613,16 @@ object MainForm: TMainForm
     ReadOnly = True
     ScrollBars = ssVertical
     TabOrder = 5
+  end
+  object Splitter1: TSplitter
+    Cursor = crVSplit
+    Left = 0
+    Height = 5
+    Top = 384
+    Width = 802
+    Align = alBottom
+    Anchors = [akBottom]
+    ResizeAnchor = akBottom
   end
   object OpenDialog: TOpenDialog
     Filter = '*.*|*.*'
