Добавлена опция "Не писать FF" (для spi 25 с постраничной записью)

--- a/software/main.lfm
+++ b/software/main.lfm
@@ -776,6 +776,10 @@ object MainForm: TMainForm
           AutoCheck = True
           Caption = 'Не проверять Busy бит'
         end
+        object MenuSkipFF: TMenuItem
+          AutoCheck = True
+          Caption = 'Не писать FF'
+        end
         object MenuItemBenchmark: TMenuItem
           Caption = 'Benchmark'
           OnClick = MenuItemBenchmarkClick
