--- a/software/main.lfm
+++ b/software/main.lfm
@@ -14,7 +14,7 @@ object MainForm: TMainForm
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poDesktopCenter
-  LCLVersion = '2.0.2.0'
+  LCLVersion = '2.0.12.0'
   object ProgressBar: TProgressBar
     Left = 0
     Height = 20
@@ -631,7 +631,7 @@ object MainForm: TMainForm
     top = 240
   end
   object SaveDialog: TSaveDialog
-    Filter = '*.*|*.*'
+    Filter = '*.bin|*.bin|*.*|*.*'
     Options = [ofOverwritePrompt, ofEnableSizing, ofViewDetail]
     left = 192
     top = 240
