--- a/software/main.lfm
+++ b/software/main.lfm
@@ -666,8 +666,8 @@ object MainForm: TMainForm
     Width = 842
     Align = alBottom
     Lines.Strings = (
-      'Программатор SPI, I2C, Microwire FLASH/EEPROM v2.0.1a1'
-      'http://forum.easyelectronics.ru/viewtopic.php?f=17&t=10947'
+      'AsProgrammer v2.0.2'
+      'https://github.com/nofeletru/UsbAsp-flash'
       'asprogrammer@inbox.ru'
     )
     ParentFont = False
